--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="node_modules/mint-ui/lib/style.css">
     <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js" type="text/javascript"></script>
-    <title>别拦我，我要爆个料</title>
+    <title>HandMenu</title>
     <style>
       body{
         width:100%;
